; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/apitests/user32/extr_NextDlgItem.c_OnCommand.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/apitests/user32/extr_NextDlgItem.c_OnCommand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@WM_COMMAND = common dso_local global i32 0, align 4
@IDOK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i32, i32)* @OnCommand to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @OnCommand(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* %6, align 4
  switch i32 %9, label %35 [
    i32 130, label %10
    i32 129, label %17
    i32 128, label %24
    i32 131, label %31
  ]

10:                                               ; preds = %4
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @DoTest1(i32 %11)
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* @WM_COMMAND, align 4
  %15 = call i32 @MAKEWPARAM(i32 129, i32 0)
  %16 = call i32 @PostMessage(i32 %13, i32 %14, i32 %15, i32 0)
  br label %35

17:                                               ; preds = %4
  %18 = load i32, i32* %5, align 4
  %19 = call i32 @DoTest2(i32 %18)
  %20 = load i32, i32* %5, align 4
  %21 = load i32, i32* @WM_COMMAND, align 4
  %22 = call i32 @MAKEWPARAM(i32 128, i32 0)
  %23 = call i32 @PostMessage(i32 %20, i32 %21, i32 %22, i32 0)
  br label %35

24:                                               ; preds = %4
  %25 = load i32, i32* %5, align 4
  %26 = call i32 @DoTest3(i32 %25)
  %27 = load i32, i32* %5, align 4
  %28 = load i32, i32* @WM_COMMAND, align 4
  %29 = call i32 @MAKEWPARAM(i32 131, i32 0)
  %30 = call i32 @PostMessage(i32 %27, i32 %28, i32 %29, i32 0)
  br label %35

31:                                               ; preds = %4
  %32 = load i32, i32* %5, align 4
  %33 = load i32, i32* @IDOK, align 4
  %34 = call i32 @EndDialog(i32 %32, i32 %33)
  br label %35

35:                                               ; preds = %4, %31, %24, %17, %10
  ret void
}

declare dso_local i32 @DoTest1(i32) #1

declare dso_local i32 @PostMessage(i32, i32, i32, i32) #1

declare dso_local i32 @MAKEWPARAM(i32, i32) #1

declare dso_local i32 @DoTest2(i32) #1

declare dso_local i32 @DoTest3(i32) #1

declare dso_local i32 @EndDialog(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
